--- a/angular-web-app/src/app/components/_pages/news/news.component.html
+++ b/angular-web-app/src/app/components/_pages/news/news.component.html
@@ -13,8 +13,8 @@
       <div id="filterRow" class="row">
         <div class="col-12 d-flex align-items-center justify-content-center flex-wrap">
           <button mat-raised-button [matMenuTriggerFor]="menuCategory" [matBadge]="activeFilters.categories.length"
-            [matBadgeHidden]="activeFilters.categories.length == 0" matBadgePosition="after" matBadgeColor="accent"
-            class="m-2">
+            [matBadgeHidden]="activeFilters.categories.length == 0" matBadgePosition="after" color="accent" matBadgeColor="accent"
+            class="m-2 rounded-pill">
             <mat-icon class="mr-0 mr-sm-2">category</mat-icon>
             <span class="d-none d-sm-inline">Categorie</span>
           </button>
