--- a/angular-web-app/src/app/components/back-to-top/back-to-top.component.html
+++ b/angular-web-app/src/app/components/back-to-top/back-to-top.component.html
@@ -1,5 +1,5 @@
 <div class="back-top mat-elevation-z8" [@appearInOut]="animationState">
     <button mat-icon-button color="accent" class="m-2" (click)="scrollTop($event)">
-        <mat-icon>keyboard_arrow_up</mat-icon>
+        <mat-icon>north</mat-icon>
     </button>
 </div>
