--- a/angular-web-app/src/app/components/contact-card/contact-card.component.html
+++ b/angular-web-app/src/app/components/contact-card/contact-card.component.html
@@ -48,10 +48,10 @@
               </mat-form-field>
             </div>
 
-            <button mat-raised-button color="accent" type="submit" class="mr-3" [disabled]="!contactForm.form.valid">
+            <button mat-raised-button color="accent" type="submit" class="mr-3 rounded-pill" [disabled]="!contactForm.form.valid">
               Verstuur
             </button>
-            <button mat-raised-button color="primary" type="button" (click)="resetForm();">
+            <button mat-raised-button color="primary" type="button" class="rounded-pill" (click)="resetForm();">
               Reset
             </button>
 
