--- a/angular-web-app/src/app/components/latest-news/latest-news.component.html
+++ b/angular-web-app/src/app/components/latest-news/latest-news.component.html
@@ -1,7 +1,7 @@
 <ngb-carousel *ngIf="newsItems && generalContent" #newsCarousel>
   <ng-template ngbSlide *ngFor="let newsItem of newsItems">
     <div style="margin: 0 15px">
-      <app-news-card [newsItem]="newsItem" [direction]="'row'" [elevation]="generalContent.cardElevation"></app-news-card>
+      <app-news-card [newsItem]="newsItem" [elevation]="generalContent.cardElevation"></app-news-card>
     </div>
   </ng-template>
 </ngb-carousel>
