--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -24,10 +24,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <div [style.height]="featured.maxHeight" class="d-flex flex-column align-items-center justify-content-center featured-item-wrapper">
-            <app-painting-card class="featured-item" [painting]="featured.painting" [elevation]="generalContent.cardElevation">
-            </app-painting-card>
-          </div>
+          <app-featured [featured]="featured" [elevation]="generalContent.cardElevation"></app-featured>
         </div>
       </div>
     </div>
