--- a/angular-web-app/src/app/components/gallery/gallery.component.scss
+++ b/angular-web-app/src/app/components/gallery/gallery.component.scss
@@ -20,12 +20,14 @@
 .filterAccordion {
   max-height: 50vh;
   overflow: auto;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .filterBar-buttons,
 .filterAccordion {
   width: 100%;
-  background-color: white;
+  background-color: #fff;
 }
 
 @media (min-width: 768px) {
