--- a/angular-web-app/src/app/components/latest/latest.component.scss
+++ b/angular-web-app/src/app/components/latest/latest.component.scss
@@ -1,11 +1,6 @@
-.img-wrapper {
+.latest-item-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  height: 60vh;
-  padding: 0 1rem;
-}
-
-.slider-img {
-  max-width: 100%;
-  max-height: 100%;
-  border-radius: 4px;
 }
