--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -13,17 +13,88 @@
       </app-section-title> -->
       <div class="container" *ngIf="generalContent">
         <div class="row mb-5">
-          <div class="col-12">
-            <app-carousel-img [images]="painting.images" [elevation]="generalContent.cardElevation"></app-carousel-img>
+          <!-- Carousel -->
+          <div class="col-12 col-md-8">
+            <app-carousel-img [images]="painting.images" [elevation]="generalContent.cardElevation">
+            </app-carousel-img>
+          </div>
+          <!-- Info -->
+          <div class="col-12 col-md-4 d-flex flex-column justify-content-center p-0">
+            <mat-card class="mat-elevation-z0 p-0 mx-0">
+              <mat-list>
+                <mat-list-item>
+                  <mat-icon mat-list-icon color="accent">sell</mat-icon>
+                  <div mat-line class="txt-dark-muted">Titel</div>
+                  <div mat-line>{{painting.title}}</div>
+                </mat-list-item>
+                <mat-divider class="list-divider"></mat-divider>
+                <mat-list-item>
+                  <mat-icon mat-list-icon color="accent">person</mat-icon>
+                  <div mat-line class="txt-dark-muted">Kunstenaar</div>
+                  <div mat-line>{{painting.artist}}</div>
+                </mat-list-item>
+                <mat-divider class="list-divider"></mat-divider>
+                <div class="expansion-list-item">
+                  <mat-expansion-panel class="expansion-list-panel mat-elevation-z0" (opened)="panelOpenState = true"
+                    (closed)="panelOpenState = false">
+                    <mat-expansion-panel-header class="expansion-list-panel-header">
+                      <mat-list>
+                        <mat-list-item>
+                          <mat-icon mat-list-icon color="accent">description</mat-icon>
+                          <div mat-line class="txt-dark-muted">Omschrijving</div>
+                        </mat-list-item>
+                      </mat-list>
+                    </mat-expansion-panel-header>
+                    <span class="expansion-list-panel-content" [innerHTML]="painting.description"></span>
+                  </mat-expansion-panel>
+                </div>
+                <mat-divider class="list-divider"></mat-divider>
+                <mat-list-item>
+                  <mat-icon mat-list-icon color="accent">palette</mat-icon>
+                  <div mat-line class="txt-dark-muted">Verf</div>
+                  <div mat-line>{{painting.paint}}</div>
+                </mat-list-item>
+                <mat-divider class="list-divider"></mat-divider>
+                <mat-list-item>
+                  <mat-icon mat-list-icon color="accent">compare</mat-icon>
+                  <div mat-line class="txt-dark-muted">Materiaal</div>
+                  <div mat-line>{{painting.material}}</div>
+                </mat-list-item>
+                <mat-divider class="list-divider"></mat-divider>
+                <mat-list-item>
+                  <mat-icon mat-list-icon color="accent">category</mat-icon>
+                  <div mat-line class="txt-dark-muted">Categorie</div>
+                  <div mat-line>{{painting.category}}</div>
+                </mat-list-item>
+                <mat-divider class="list-divider"></mat-divider>
+                <mat-list-item>
+                  <mat-icon mat-list-icon color="accent">photo_size_select_large</mat-icon>
+                  <div mat-line class="txt-dark-muted">Afmetingen</div>
+                  <div mat-line>{{painting.length}} x {{painting.width}} cm</div>
+                </mat-list-item>
+                <mat-list-item class="expansion-list-item">
+                  <mat-icon mat-list-icon color="accent">shopping_cart</mat-icon>
+                  <div mat-line>
+                    <mat-chip-list [ngSwitch]="painting.status">
+                      <mat-chip>{{painting.price}}</mat-chip>
+                      <mat-chip *ngSwitchCase="'Beschikbaar'" color="accent" selected>{{painting.status}}</mat-chip>
+                      <mat-chip *ngSwitchCase="'Niet Beschikbaar'" color="primary" selected>{{painting.status}}
+                      </mat-chip>
+                      <mat-chip *ngSwitchDefault>{{painting.status}}</mat-chip>
+                    </mat-chip-list>
+                  </div>
+                </mat-list-item>
+              </mat-list>
+            </mat-card>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Info -->
-    <section class="page-section bg-light">
-      <!-- <app-section-title [title]="'Informatie'" [subTitle]="'Detail'">
-      </app-section-title> -->
+    <!-- <section class="page-section bg-light">
+      <app-section-title [title]="'Informatie'" [subTitle]="'Detail'">
+      </app-section-title>
       <div class="container" *ngIf="generalContent">
         <div class="row">
 
@@ -106,7 +177,7 @@
 
         </div>
       </div>
-    </section>
+    </section> -->
 
   </main>
 </div>
