--- a/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
+++ b/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
@@ -4,7 +4,7 @@
       <div class="col-12">
 
         <!-- Multi image -->
-        <ngb-carousel *ngIf="images.length > 1">
+        <ngb-carousel *ngIf="images.length > 1" [showNavigationIndicators]="false">
           <ng-template ngbSlide *ngFor="let image of images">
             <div class="d-flex flex-column align-items-center justify-content-center img-wrapper">
               <!-- Image -->
