--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -14,13 +14,13 @@
       <div class="container" *ngIf="generalContent">
         <div class="row mb-5">
           <!-- Carousel -->
-          <div class="col-12 col-md-8">
+          <div class="col-12 col-lg-7">
             <app-carousel-img [images]="painting.images" [elevation]="generalContent.cardElevation">
             </app-carousel-img>
           </div>
           <!-- Info -->
-          <div class="col-12 col-md-4 d-flex flex-column justify-content-center p-0">
-            <mat-card class="mat-elevation-z0 p-0 mx-0">
+          <div class="col-12 col-lg-5 d-flex flex-column justify-content-center">
+            <mat-card class="mat-elevation-z0">
               <mat-list>
                 <mat-list-item>
                   <mat-icon mat-list-icon color="accent">sell</mat-icon>
