--- a/angular-web-app/src/app/components/_admin/sidenav/sidenav.component.html
+++ b/angular-web-app/src/app/components/_admin/sidenav/sidenav.component.html
@@ -3,7 +3,9 @@
   <!-- Header -->
   <div class="d-flex flex-row navlist-header-container">
     <div class="d-flex align-items-center justify-content-center h-100 navlist-header-icon">
-      <img src="https://firebasestorage.googleapis.com/v0/b/spavento-paintings.appspot.com/o/files%2Fspavento-logo.png?alt=media&token=41650cbb-9a3e-43be-bcc1-46a3c3ab432e" alt="Spavento logo">
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/spavento-paintings.appspot.com/o/files%2Fspavento-logo.png?alt=media&token=41650cbb-9a3e-43be-bcc1-46a3c3ab432e"
+        alt="Spavento logo">
     </div>
     <div class="d-flex align-items-center navlist-header-text">
       <span class="font-weight-bold">Spavento</span>
@@ -15,7 +17,7 @@
 
   <!-- Links -->
   <div class="d-flex flex-column scroll-content-wrapper">
-    <ngx-simplebar [options]="simplebarOptions" class="d-flex flex-column scroll-content">
+    <div class="d-flex flex-column scroll-content">
       <mat-accordion>
         <div *ngFor="let navlink of navlinks" class="navlink-wrapper">
           <!-- Without children -->
@@ -42,9 +44,9 @@
           </mat-expansion-panel>
         </div>
       </mat-accordion>
-    </ngx-simplebar>
+    </div>
   </div>
-  
+
   <!-- Sidebar bottom section -->
   <div class="d-flex flex-column flex-shrink-0 py-2">
     <!-- Seperator -->
