--- a/angular-web-app/src/app/components/_pages/calendar/calendar.component.html
+++ b/angular-web-app/src/app/components/_pages/calendar/calendar.component.html
@@ -6,7 +6,7 @@
 <main id="contact" class="main main-raised" *ngIf="generalContent">
   <!-- Calendar -->
   <section *ngIf="calendarItems" class="page-section bg-light">
-    <app-section-title [title]="contactCards.title" [subTitle]="contactCards.subTitle" [text]="contactCards.text">
+    <app-section-title [title]="'Kalender'" [subTitle]="'Aankomende activiteiten'" [text]="">
     </app-section-title>
     <div class="container">
       <div class="row">
