--- a/angular-web-app/src/app/components/_admin/calendar-add/calendar-add.component.html
+++ b/angular-web-app/src/app/components/_admin/calendar-add/calendar-add.component.html
@@ -42,8 +42,8 @@
             <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
               <mat-label>Start en eind datum</mat-label>
               <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-                <input matStartDate id="dateStart" placeholder="Start datum" name="dateStart" [(ngModel)]="calendarItem.dateStart" [disabled]="formDisabled" #dateStart="ngModel">
-                <input matEndDate id="dateEnd" placeholder="Eind datum" name="dateEnd" [(ngModel)]="calendarItem.dateEnd" [disabled]="formDisabled" #dateEnd="ngModel">
+                <input matStartDate id="dateStart" placeholder="Start datum" name="dateStart" [(ngModel)]="startDate" [disabled]="formDisabled" #dateStart="ngModel">
+                <input matEndDate id="dateEnd" placeholder="Eind datum" name="dateEnd" [(ngModel)]="endDate" [disabled]="formDisabled" #dateEnd="ngModel">
               </mat-date-range-input>
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-date-range-picker #picker></mat-date-range-picker>
