--- a/angular-web-app/src/app/components/_admin/calendar-edit/calendar-edit.component.html
+++ b/angular-web-app/src/app/components/_admin/calendar-edit/calendar-edit.component.html
@@ -28,7 +28,7 @@
               <mat-error *ngIf="author.invalid">
                 Auteur is <strong>verplicht</strong>
               </mat-error>
-            </mat-form-field>            
+            </mat-form-field>
           </div>
 
           <div class="form-group row">
@@ -39,11 +39,12 @@
                 [disabled]="formDisabled" #location="ngModel" />
             </mat-form-field>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12 col-md-6">
               <mat-label>Start en eind datum</mat-label>
               <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-                <input matStartDate id="dateStart" placeholder="Start datum" name="dateStart" [(ngModel)]="calendarItem.dateStart" [value]="calendarItem.dateStart" [disabled]="formDisabled" #dateStart="ngModel">
-                <input matEndDate id="dateEnd" placeholder="Eind datum" name="dateEnd" [(ngModel)]="calendarItem.dateEnd" [value]="calendarItem.dateEnd" [disabled]="formDisabled" #dateEnd="ngModel">
+                <input matStartDate id="startDate" placeholder="Start datum" name="startDate" [(ngModel)]="startDate" [disabled]="formDisabled" #dateStart="ngModel">
+                <input matEndDate id="endDate" placeholder="Eind datum" name="endDate" [(ngModel)]="endDate" [disabled]="formDisabled" #dateEnd="ngModel">
               </mat-date-range-input>
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-date-range-picker #picker></mat-date-range-picker>
