--- a/angular-web-app/src/app/components/_admin/calendar-overview/calendar-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/calendar-overview/calendar-overview.component.html
@@ -36,7 +36,7 @@
 
             <ng-container matColumnDef="location">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Locatie </th>
-              <td mat-cell *matCellDef="let item"> {{ item.category }} </td>
+              <td mat-cell *matCellDef="let item"> {{ item.location }} </td>
             </ng-container>
 
             <ng-container matColumnDef="author">
