--- a/angular-web-app/src/app/components/_admin/comp-calendar/comp-calendar.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-calendar/comp-calendar.component.html
@@ -1,7 +1,7 @@
 <mat-card *ngIf="content && generalContent" class="{{generalContent.cardElevation}}">
   <h4 class="title-underlined">Resultaat</h4>
   <div class="container-fluid">
-    <app-section-title [title]="galleryContent.title" [subTitle]="galleryContent.subTitle" [text]="galleryContent.text">
+    <app-section-title [title]="content.title" [subTitle]="content.subTitle" [text]="content.text">
     </app-section-title>
   </div>
 </mat-card>
@@ -19,9 +19,9 @@
       <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
         class="form-field col-sm-12 col-md-6">
         <mat-label>Content titel</mat-label>
-        <input matInput type="text" id="galleryContentTitle" placeholder="Titel" name="galleryContentTitle"
-          [(ngModel)]="galleryContent.title" #galleryContentTitleInput="ngModel" required>
-        <mat-error *ngIf="galleryContentTitleInput.invalid">
+        <input matInput type="text" id="contentTitle" placeholder="Titel" name="contentTitle"
+          [(ngModel)]="content.title" #contentTitleInput="ngModel" required>
+        <mat-error *ngIf="contentTitleInput.invalid">
           Titel is verplicht
         </mat-error>
       </mat-form-field>
@@ -29,9 +29,9 @@
       <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
         class="form-field col-sm-12 col-md-6">
         <mat-label>Content subtitel</mat-label>
-        <input matInput type="text" id="galleryContentSubTitle" placeholder="Subtitel" name="galleryContentSubTitle"
-          [(ngModel)]="galleryContent.subTitle" #galleryContentSubTitleInput="ngModel" required>
-        <mat-error *ngIf="galleryContentSubTitleInput.invalid">
+        <input matInput type="text" id="contentSubTitle" placeholder="Subtitel" name="contentSubTitle"
+          [(ngModel)]="content.subTitle" #contentSubTitleInput="ngModel" required>
+        <mat-error *ngIf="contentSubTitleInput.invalid">
           Subtitel is verplicht
         </mat-error>
       </mat-form-field>
@@ -39,9 +39,9 @@
       <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
         class="form-field col-12">
         <mat-label>Content text</mat-label>
-        <textarea rows="1" matInput type="text" id="galleryContentText" placeholder="Text" name="galleryContentText"
-          [(ngModel)]="galleryContent.text" #galleryContentTextInput="ngModel" required> </textarea>
-        <mat-error *ngIf="galleryContentTextInput.invalid">
+        <textarea rows="1" matInput type="text" id="contentText" placeholder="Text" name="contentText"
+          [(ngModel)]="content.text" #contentTextInput="ngModel" required> </textarea>
+        <mat-error *ngIf="contentTextInput.invalid">
           Text is verplicht
         </mat-error>
       </mat-form-field>
