--- a/angular-web-app/src/app/components/painting-card/painting-card.component.scss
+++ b/angular-web-app/src/app/components/painting-card/painting-card.component.scss
@@ -7,6 +7,7 @@
   max-height: calc(100% - 30px);
   max-width: calc(100% - 30px);
   overflow: hidden;
+  margin: 16px !important;
 }
 
 .painting-card-img {
